<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
                name="viewModel"
                type="dev.tran.nam.gobear.view.splash.authen.viewmodel.AuthenViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            tools:context="dev.tran.nam.gobear.view.splash.authen.AuthenFragment">

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.15"/>

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.85"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/onboard_title"
                android:id="@+id/tv_title"
                android:fontFamily="@font/sfprotext_semibold"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_20sp"
                android:layout_marginTop="@dimen/positive_45dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline_end"
                app:layout_constraintStart_toStartOf="@+id/guideline_start"/>

        <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/edt_user"
                android:textSize="@dimen/text_size_12sp"
                android:hint="@string/authen_hint_user"
                android:maxLines="1"
                android:nextFocusDown="@+id/edt_password"
                android:imeOptions="actionNext"
                android:textColorHint="@android:color/black"
                android:textColor="@android:color/black"
                android:layout_marginTop="@dimen/positive_40dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_title"
                app:layout_constraintEnd_toStartOf="@+id/guideline_end"
                app:layout_constraintStart_toStartOf="@+id/guideline_start"/>

        <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/edt_password"
                android:textSize="@dimen/text_size_12sp"
                android:hint="@string/authen_hint_password"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:textColorHint="@android:color/black"
                android:textColor="@android:color/black"
                android:layout_marginTop="@dimen/positive_15dp"
                app:layout_constraintTop_toBottomOf="@+id/edt_user"
                app:layout_constraintEnd_toStartOf="@+id/guideline_end"
                app:layout_constraintStart_toStartOf="@+id/guideline_start"/>

        <androidx.appcompat.widget.SwitchCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/positive_20dp"
                app:layout_constraintStart_toStartOf="@+id/guideline_start"
                app:layout_constraintTop_toBottomOf="@+id/edt_password"
                android:id="@+id/switchRemember"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/authen_text_remember_me"
                android:textSize="@dimen/text_size_12sp"
                android:textColor="@android:color/black"
                android:layout_marginStart="@dimen/positive_10dp"
                app:layout_constraintStart_toEndOf="@+id/switchRemember"
                app:layout_constraintBottom_toBottomOf="@+id/switchRemember"
                app:layout_constraintTop_toTopOf="@+id/switchRemember"
                android:id="@+id/appCompatTextView2"/>

        <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/authen_text_login"
                android:textSize="@dimen/text_size_13sp"
                android:textColor="@android:color/black"
                android:background="@drawable/bg_btn_login"
                android:paddingStart="@dimen/positive_20dp"
                android:paddingEnd="@dimen/positive_20dp"
                android:onClick="@{() -> viewModel.onLogin(edtUser.getText().toString(),edtPassword.getText().toString(),switchRemember.isChecked())}"
                android:layout_marginTop="@dimen/positive_20dp"
                app:layout_constraintTop_toBottomOf="@+id/switchRemember"
                app:layout_constraintEnd_toStartOf="@+id/guideline_end"
                app:layout_constraintStart_toStartOf="@+id/guideline_start"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>